--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"> 
+    <title>EXIT GALLEY</title>
 </head>
 <body>
     
 </body>
-</html>jjj
+</html>
