INDEX.HTML: se agrega el header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="styles.css"> 
-    <title>EXIT GALLEY</title>
+    <title>EXIT GALLERY</title>
 </head>
 <body>
+    <header>
+        <p>EIRCK</p>
+        <ul>
+            <li>INICIO</li>
+            <li>GALERÍA</li>
+            <li>CONTACTO</li>
+        </ul>
+    </header>
     
 </body>
 </html>
