INDEXT.HTML & STYLES.CSS: se agrega y diseña momentaneamente el header

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="styles.css"> 
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>EXIT GALLERY</title>
 </head>
+
 <body>
     <header>
-        <p>EIRCK</p>
-        <ul>
-            <li>INICIO</li>
-            <li>GALERÍA</li>
-            <li>CONTACTO</li>
-        </ul>
+        <div class="content-header">
+            <p>EIRCK</p>
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li>GALERÍA</li>
+                <li>CONTACTO</li>
+            </ul>
+        </div>
+
     </header>
-    
+
 </body>
+
 </html>
