--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>EXIT GALLERY</title>
 </head>
 
@@ -16,13 +13,25 @@
         <div class="content-header">
             <p>EIRCK</p>
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li>GALERÍA</li>
-                <li>CONTACTO</li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </div>
-
     </header>
+    <section class="header-gallery">
+        <p>
+            GALLERY
+        </p>
+        <div class="slider">
+            <ul>
+                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 
