STYLES.CSS: se modifican aspectos del header

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -25,7 +25,7 @@
         </p>
         <div class="slider">
             <ul>
-                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+                <li><img src="./images/gallery1.jpeg" alt=""></li>
                 <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
                 <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
                 <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
