--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>EXIT GALLERY</title>
 </head>
