--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -32,6 +32,17 @@
             </ul>
         </div>
     </section>
+   <section class="article-card">
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+       <article class="card"><img src="https://via.placeholder.com/200x200" alt=""></article>
+   </section>
 
 </body>
 
