--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -43,6 +43,13 @@
        <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
        <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
    </section>
+   <footer>
+       <div class="developmen-by">Development by &copy; Miguel Gonzalez</div>
+       <div class="development-with">
+           <div class="HTML"><img src="" alt="">HTML 5</div>
+           <div class="CSS"><img src="" alt="">CSS 3</div>
+       </div>
+   </footer>
 
 </body>
 
