INDEX.HTML & STYLES.CSS: Se agregan estilos a el footer y sombras a las cards

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -44,11 +44,13 @@
        <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
    </section>
    <footer>
-       <div class="developmen-by">Development by &copy; Miguel Gonzalez</div>
+       <div class="development-by">Development by &copy; Miguel Gonzalez</div>
        <div class="development-with">
-           <div class="HTML"><img src="" alt="">HTML 5</div>
-           <div class="CSS"><img src="" alt="">CSS 3</div>
+           <p>Development only with: </p>
+           <div class="HTML"><img src="./images/html.png" alt=""></div>
+           <div class="CSS"><img src="./images/css.png" alt=""></div>
        </div>
+       <div style="clear: both"></div>
    </footer>
 
 </body>
