INDEX.HTML & STYLES.CSS: Se agregan imagenes con sus respectivos estilos

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -25,23 +25,23 @@
         </p>
         <div class="slider">
             <ul>
-                <li><img src="./images/gallery1.jpeg" alt=""></li>
-                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
-                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
-                <li><img src="https://via.placeholder.com/1500x200" alt=""></li>
+                <li><img src="./images/SLIDER1.png" alt=""></li>
+                <li><img src="./images/SLIDER2.png" alt=""></li>
+                <li><img src="./images/SLIDER3.png" alt=""></li>
+                <li><img src="./images/SLIDER4.png" alt=""></li>
             </ul>
         </div>
     </section>
    <section class="article-card">
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
-       <article class="card"><img src="https://via.placeholder.com/378x200" alt=""></article>
+       <article class="card"><img src="./images/GRFF1.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF2.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF3.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF4.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF5.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF6.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF7.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF8.png" alt=""></article>
+       <article class="card"><img src="./images/GRFF9.png" alt=""></article>
    </section>
    <footer>
        <div class="development-by">Development by &copy; Miguel Gonzalez</div>
