INDEX.HTML & STYLES.CSS: Se agrega la paginación con todo y estilos

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -43,6 +43,15 @@
        <article class="card"><img src="./images/GRFF8.png" alt=""></article>
        <article class="card"><img src="./images/GRFF9.png" alt=""></article>
    </section>
+   <div class="pagination">
+       <a href=""><<</a>
+       <a href="">1</a>
+       <a href="">2</a>
+       <a href="">3</a>
+       <a href="">4</a>
+       <a href="">5</a>
+       <a href="">>></a>
+   </div>
    <footer>
        <div class="development-by">Development by &copy; Miguel Gonzalez</div>
        <div class="development-with">
