STYLES.CSS: Se actualizan los estilos responsive

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -14,9 +14,10 @@
             <p>EIRCK</p>
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">SHOP</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
+            <div style="clear: both"></div>
         </div>
     </header>
     <section class="header-gallery">
