INDEX.HTML & STYLES.CSS: ajustes

--- a/PROJECT 1/index.html
+++ b/PROJECT 1/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://kit.fontawesome.com/99ea380762.js" crossorigin="anonymous"></script>
     <title>EXIT GALLERY</title>
 </head>
 
@@ -12,7 +13,9 @@
     <header>
         <div class="content-header">
             <p>EIRCK</p>
-            <ul>
+            <input type="checkbox" id="btn-menu">
+            <label for="btn-menu"><i class="fa-solid fa-2x fa-bars"></i></label>
+            <ul class="menu">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">SHOP</a></li>
                 <li><a href="#">CONTACT</a></li>
